--- a/android-coroutine-flow-utils/src/main/res/values/strings.xml
+++ b/android-coroutine-flow-utils/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="viewCoroutineScope" translatable="false">ViewCoroutineScopeTagKey</string>
+    <string name="viewCoroutineScopeTagKey" translatable="false">ViewCoroutineScopeTagKey</string>
 </resources>
